fix spacing

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body {
 }
 
 .form input::placeholder {
-  color: var(--Neutral-500);
+  color: var(--Neutral-300);
   font-size: 1.8rem;
   line-height: 120%;
   font-weight: var(--Regular);
